<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    
    <string name="letter_c">C</string>
    <string name="letter_n">N</string>
    <string name="letter_d">D</string>

</resources>
