<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- top -->

    <include layout="@layout/screen_title" />

    <!-- center -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:background="#485F74" >
        <!-- 模式显示 -->
        <TextView
            android:id="@+id/moShiTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letter_c"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- bottom -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#7099B6"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/progressItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_c"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:text="@string/letter_n"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:text="@string/letter_d"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/speed_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressItem"
            android:src="@drawable/mode_progress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/speed_progress"
            android:gravity="center_horizontal" >

            <SeekBar
                android:id="@+id/moShiSeekBar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:max="200"
                android:progress="0"
                android:indeterminateDrawable="@drawable/btn1"
                android:progressDrawable="@drawable/progressbar"
                android:thumb="@drawable/seekbar_thumb" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>